Prevent comment header and like icon overlapping

--- a/kuulemma/static/app/components/comment-list/comment-list.less
+++ b/kuulemma/static/app/components/comment-list/comment-list.less
@@ -91,6 +91,7 @@
     h4 {
       margin-top: 0;
       margin-bottom: @comment-internal-margin;
+      padding-right: @layout-margin-large;
     }
 
     .like {
